# hugo-doug-john-search-agent

./: .gitignore  README.md  pyproject.toml
product/: PRD.md
scripts/: print_traces.py  run_eval.py
src/search_agent/: advanced_search.py  agent.py
